# web-ssh-rust

./: Cargo.toml  Dockerfile  README.md  package-lock.json
front/: README.md  package-lock.json  package.json
front/public/: index.html
front/src/: App.jsx  App.module.css
front/src/deploy/: Deploy.jsx  deploy.module.css
front/src/ssh/: Ssh.jsx  help.js  ssh.module.css
src/: api.rs  main.rs
src/api/: _404.rs  files.rs  hello.rs  ssh_websocket.rs
src/api/ssh_websocket/: auth_type.rs  client_handl.rs  session.rs
static/: asset-manifest.json  index.html
static/static/css/: main.2893d410.css  main.2893d410.css.map  main.309b1f1a.css  main.309b1f1a.css.map
static/static/js/: main.01f7f834.js  main.01f7f834.js.map  main.449472f3.js  main.449472f3.js.LICENSE.txt  main.449472f3.js.map  main.59d0d29b.js  main.59d0d29b.js.LICENSE.txt  main.59d0d29b.js.map
