[package]
name = "warp-websockets-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
tokio-stream = "0.1.15"
futures = "0.3.30"
log = "0.4.21"
env_logger = "0.11.3"
russh = { version = "0.45.0",  features = ["openssl"] }
russh-keys = { version = "0.45.0", features = ["vendored-openssl"] }
shell-escape = "0.1.5"
termion = "4.0.0"
tokio-fd = "0.3.0"
async-trait = "0.1.80"
anyhow = "1.0.86"
serde_json = "1.0.117"
itertools = "0.13.0"
base64 = "0.22.1"
serde = "1.0.203"
urlencoding = "2.1.3"
